# webmerge-api-python

./: Pipfile  README.md  main.py  makefile  mypy.ini  pyproject.toml  setup.cfg
tests/: test_api.py  test_main.py
webmerge/: api.py
