[metadata]
name = webmerge-api-python-SHIVAN-SIVAKUMARAN
version = 0.0.1
author = Shivan Sivakumaran
author_email = shivan.sivakumaran@gmail.com
description = A Python wrapper for WebMerge API
long_descrption = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shivans93/webmerge-api-python
project_urls =
    Bug Tracker = https://github.com/shivans93/webmerge-api-python/issues
classifers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = webmerge
packages = find:
python_requires = >=3.8

[options.package.find]
where = webmerge
